[gd_scene load_steps=4 format=3 uid="uid://c2cd6nrwgacwx"]

[ext_resource type="StyleBox" uid="uid://brx00us83uw3f" path="res://Styles/panel.tres" id="1_2xx85"]
[ext_resource type="Script" uid="uid://c651ymva7hwt2" path="res://Scripts/deck_selection.gd" id="1_g0e5t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xx85"]
bg_color = Color(0.224905, 0.224905, 0.224905, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Deck Selection" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0e5t")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_2xx85")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Top Bar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Top Bar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.77
text = "Select a deck to study."

[node name="Next" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Top Bar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Next"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2xx85")

[node name="DeckMargins" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Decks" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins"]
layout_mode = 2

[node name="User Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks"]
layout_mode = 2
text = "User Decks:"

[node name="UserDecks" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks"]
unique_name_in_owner = true
layout_mode = 2
auto_width = true
auto_height = true
max_columns = 5
same_column_width = true
fixed_column_width = 125

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks"]
layout_mode = 2

[node name="Example Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks"]
layout_mode = 2
text = "Example Decks:"

[node name="ExampleDecks" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Top Bar/Next" to="." method="_on_next_button_down"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks/UserDecks" to="." method="_on_user_decks_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/DeckMargins/Decks/ExampleDecks" to="." method="_on_example_decks_item_selected"]
